# RNOS-Runtime

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
agent/: __init__.py  loop.py  parser.py  planner.py
baselines/: __init__.py  adaptive_circuit_breaker.py  circuit_breaker.py
configs/: aggressive.yaml  default.yaml
docs/: experiment_5_hybrid.md  rnos_demo_output.txt
experiments/: __init__.py  configurable_api.py  experiment_2.py  experiment_2_5.py  experiment_3.py  experiment_4.py  radiation_sim.py  recursive_loop.py  retry_storm.py
experiments/ci_control/: controllers.py  pipeline_model.py  run_ci_experiment.py  scenarios.py
experiments/common/: persistence.py
experiments/db_control/: controllers.py  query_model.py  run_db_experiment.py  scenarios.py
experiments/experiment_5_hybrid/: __init__.py  run_experiment_5.py  scenarios.py
experiments/microservice_control/: controllers.py  run_microservice_experiment.py  scenarios.py  service_model.py
experiments/scheduler_control/: __init__.py  controllers.py  run_scheduler_experiment.py  scenarios.py  scheduler_model.py
integrations/: __init__.py  langchain_wrapper.py
paper/: d3_paper_v0.2.md
results/: runs.jsonl
rnos/: __init__.py  coherence.py  entropy.py  hybrid.py  logger.py  policy.py  runtime.py  trust.py  types.py
scripts/: analyze_trace.py  generate_entropy_chart.py  generate_report.py  run_agent.py  run_comparison.py  run_experiment.py  visualize.py
tools/: __init__.py  base.py  calculator.py  file_ops.py  unstable_api.py
