[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rnos-runtime"
version = "0.1.0"
description = "A control-plane runtime for bounded autonomous execution."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "forumk2" }]
dependencies = ["PyYAML>=6.0", "openai>=1.40.0"]

[tool.setuptools.packages.find]
include = ["rnos*", "agent*", "tools*", "integrations*", "experiments*"]
